<resources>
    <string name="app_name">PorkSkin</string>
    <string name="diet_name">Dieta Dr. Pablo</string>
    <string name="diet_dr">Dr. Pablo</string>
    <string name="diet_dr_email">drpablo@noreply.com</string>
    <string name="diet_start">Inicia tu dieta</string>
    <string name="diet_setup">¿Cuantas semanas deseas estar a dieta?</string>
    <string name="diet_no_setup">Dieta no iniciada</string>
    <string name="diet_no_start">Dieta no configurada</string>
    <string name="diet_start_week">¿Semanas a Dieta?</string>
    <string name="diet_meals_schedules">¿Horarios de tus comidas?</string>
    <string name="diet_meals_breakfast">Desayuno</string>
    <string name="diet_meals_lunch">Comida</string>
    <string name="diet_meals_diner">Cena</string>
    <string name="diet_meals_guzgera">Antojo o Colacion</string>
    <string name="diet_meals_guzgera_reminder">¿Recordar comidas?</string>
    <string name="diet_meals_meal_reminder">Antes de cada comida</string>
    <string name="diet_meals_no_meal_reminder">No quiero recordatorios</string>
    <string name="diet_yes">Si</string>
    <string name="diet_no">No</string>
    <string name="diet_first_week">Una Semana</string>
    <string name="diet_start_on_week">Dieta iniciara la semana %1$s</string>
    <string name="diet_setting_startWeek">startWeek</string>
    <string name="diet_setting_dietStarted">Diet Started</string>
    <string name="diet_setting_reminders">reminders</string>
    <string name="diet_setting_breakfast_time">breakfast</string>
    <string name="diet_setting_lunch_time">lunch_time</string>
    <string name="diet_setting_diner_time">diner_time</string>
    <string name="diet_setting_diner_calendarID">cal_id</string>
    <string name="diet_saved">Dieta Configurada!</string>
    <string name="diet_meals_loaded">meals_loaded</string>
    <string name="diet_setting_already_setup">already_setup</string>
    <string name="title">Titulo Comida</string>
    <string name="meal_description">%1$s : %2$s</string>
    <string name="meal_type">%1$s</string>
    <string name="meal_week_name_title">%1$s</string>
    <string name="meal_appdb_status">DB Weeks: %1$s - DB Meals: %2$s </string>
    <string name="no_meals_found">No se encontraron comidas</string>
    <string name="reset">reset</string>
    <string name="view">View</string>
    <string name="viewDiet_Start">Dieta inicia desde semana %1$s </string>
    <string name="menu_my_meals">Mis Comidas</string>
    <string name="menu_recipes">Recetas</string>
    <string name="menu_drinks">Bebidas</string>
    <string name="menu_allowed">Alimentos Permitidos</string>
    <string name="menu_not_allowed">Alimentos No Permitidos</string>
    <string name="menu_state">Seguimiento de Peso</string>
    <string name="menu_health">Recomendaciones de Salud </string>
    <string name="menu_configure">Configura tu Dieta</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="frag_strStatus">%1$s Weeks</string>
    <string name="frag_strSoon">Proximamente</string>
    <string name="frag_strPayVersionReq">Disponible en version de pago</string>
    <string name="recomendaciones_de_salud">Toma en cuenta lo siguiente:</string>
    <string name="dieta_no_recomendada">Dieta no recomendada</string>
    <string name="acerca_de_la_dieta">Acerca de la Dieta</string>
    <string name="acerca_dieta">Esta dieta esta basada en la dieta Atkins por lo que las mismas precauciones se tienen que tomar, algunas de esas precauciones se mencionan a continuacion</string>
    <string name="precauciones">Precauciones</string>
    <string name="precaucionesText">Antes de iniciar una dieta Atkins, debe ser evaluado por un médico en busca de posibles patologías que contraindiquen el uso de una dieta baja en carbohidratos y alta en proteinas y grasas como la dieta Atkins.</string>
    <string name="advertencia_tiempo">No utilice la dieta por tiempo prolongado, el tiempo adecuado es de un mes, consulte a un nutriologo si necesita bajar mas de peso</string>
    <string name="advertencia_diabetes">Si tienes diabetes consulta a tu medico antes de hacer la dieta</string>
    <string name="diabetes">Personas con Diabetes</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="nombre_ingrediente">Ingrediente</string>
    <string name="carbohidratos">Carbohidratos</string>
    <string name="cantidad">14</string>
    <string name="total_ingredients">Ingredientes totales</string>
    <string name="cantidadStr">Cantidad:</string>
    <string name="nombreingrediente">NombreIngrediente</string>
    <string name="nn">NN</string>
    <string name="busca_recetas">Busca recetas</string>
</resources>
