<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bgribeye"
            android:contentDescription="@string/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/meal_type"
            android:id="@+id/mealOverImgTxt"
            android:layout_above="@+id/ingredienteName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_display_2_material"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="false" />

        <TextView
            android:id="@+id/ingredienteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thumbnail"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/meal_week_name_title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ingredienteName"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/meal_description"
            android:textColor="#666"
            android:textSize="14sp"
            android:id="@+id/mealContent" />

    </RelativeLayout>
</android.support.v7.widget.CardView>

