<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.antilo0p.porkskin.DietSetupActivity">

        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/diet_setup"
        android:id="@+id/textDietSetup"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/textDietSetup"
        android:layout_below="@+id/textDietSetup"
        android:layout_margin="0dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:clickable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/diet_start_week"
                android:id="@+id/txtWeekStart"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/diet_first_week"
                android:id="@+id/strSemana"
                android:layout_below="@+id/txtWeekStart"
                android:textColor="@color/colorAccent"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:layout_marginRight="5dp" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sbWeek"
                android:max="4"
                android:progress="1"
                android:secondaryProgress="1"
                android:layout_gravity="center"
                android:layout_below="@+id/strSemana"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:id="@+id/setup_meal_space"
                android:layout_below="@+id/sbWeek" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/diet_meals_schedules"
                android:id="@+id/txtMealSched"
                android:textStyle="bold"
                android:layout_below="@+id/setup_meal_space"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/diet_meals_breakfast"
                android:id="@+id/strDesayuno"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/txtMealSched"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="false" />


            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/editTimeDesayuno"
                android:layout_toRightOf="@+id/strDesayuno"
                android:layout_toEndOf="@+id/strDesayuno"
                android:layout_below="@+id/txtMealSched"
                android:textStyle="bold"
                android:maxLength="5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/setup_breakfast_space"
                android:layout_below="@+id/strDesayuno"
                android:layout_alignLeft="@+id/strDesayuno"
                android:layout_alignStart="@+id/strDesayuno" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/diet_meals_lunch"
                android:id="@+id/strComida"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/setup_breakfast_space"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="false" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/editTimeComida"
                android:layout_toEndOf="@+id/strDesayuno"
                android:layout_below="@+id/setup_breakfast_space"
                android:textStyle="bold"
                android:maxLength="5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/setup_lunch_space"
                android:layout_below="@+id/strComida"
                android:layout_alignStart="@+id/strDesayuno" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/diet_meals_diner"
                android:id="@+id/strCena"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/setup_lunch_space"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="false" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/editTimeCena"
                android:layout_toEndOf="@+id/strDesayuno"
                android:layout_below="@+id/setup_lunch_space"
                android:textStyle="bold"
                android:maxLength="5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/setup_diner_space"
                android:layout_below="@+id/strCena"
                android:layout_alignStart="@+id/strDesayuno" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/diet_meals_guzgera_reminder"
                android:id="@+id/strGuzguera"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/setup_diner_space" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diet_meals_meal_reminder"
                android:id="@+id/checkReminder"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/strGuzguera"
                android:onClick="onCheckboxClicked"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:checked="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diet_start"
                android:id="@+id/buttonStartDiet"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_below="@+id/checkReminder"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:id="@+id/resetDBbtn"
                android:layout_alignStart="@+id/editTimeCena"
                android:layout_below="@+id/buttonStartDiet"
                android:layout_alignLeft="@+id/buttonStartDiet" />


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:id="@+id/viewDietBtn"
                android:layout_alignTop="@+id/resetDBbtn"
                android:layout_toRightOf="@+id/resetDBbtn"
                android:layout_toEndOf="@+id/resetDBbtn"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:id="@+id/strSatus"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorAccent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnDesayuno"
                android:layout_below="@+id/txtMealSched"
                android:layout_toRightOf="@+id/editTimeDesayuno"
                android:layout_toEndOf="@+id/editTimeDesayuno"
                android:src="@drawable/ic_alarm_black_24dp"
                android:background="@android:color/transparent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnComida"
                android:src="@drawable/ic_alarm_black_24dp"
                android:layout_below="@+id/setup_breakfast_space"
                android:layout_toRightOf="@+id/editTimeComida"
                android:layout_toEndOf="@+id/editTimeComida"
                android:background="@android:color/transparent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnCena"
                android:src="@drawable/ic_alarm_black_24dp"
                android:layout_below="@+id/setup_lunch_space"
                android:layout_toRightOf="@+id/editTimeCena"
                android:layout_toEndOf="@+id/editTimeCena"
                android:background="@android:color/transparent" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
</LinearLayout>

