<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bgribeye"
            android:contentDescription="@string/ingrediente" />

        <TextView
            android:id="@+id/ingredienteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thumbnail"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/nombre_ingrediente"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="22sp" />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/ingredientImgBtnSrch"
            android:background="@drawable/ic_search_black_24dp"
            android:layout_below="@+id/ingredienteName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/carbohidratos"
            android:id="@+id/carbStr"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/carbsCounter"
            android:layout_toEndOf="@+id/carbsCounter"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/carbs"
            android:id="@+id/carbsCounter"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignTop="@+id/carbStr"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="porcion"
            android:id="@+id/strPorcion"
            android:layout_above="@+id/carbStr"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="55dp" />


    </RelativeLayout>
</android.support.v7.widget.CardView>

